syntax = "proto3";

import "google/protobuf/timestamp.proto";

package curve.types.v1;

message Pool {
  string address = 1;
  uint64 created_at_timestamp = 2;
  uint64 created_at_block_number = 3;
  uint64 log_ordinal = 4;
  string transaction_id = 5;
  string registry_address = 6;
}

message Pools {
  repeated Pool pools = 1;
}